# cotorra

./: .prettierrc.toml  .readthedocs.yaml  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
config/: main.yaml  qt_loss_example.yaml
config/model/: llama-32-lite.yaml  llama-32.yaml
docs/: api.md  index.md
docs/api/: cli.md  extraction.md  index.md  scoring.md  training.md
docs/recipes/: development-workflow.md  index.md  transfer-learning.md
docs/stylesheets/: extra.css
overrides/partials/: copyright.html  source-file.html
recipes/: README.md  development-workflow.md  standard-workflow.md  transfer-learning.md
src/cotorra/: cli.py  configurable.py  extractor.py  loader.py  logger.py  loss.py  scorer_generative.py  scorer_rep_based.py  trainer.py  trainer_dp.py  tuner.py  util.py
src/cotorra/config/: extraction.yaml  scoring.yaml  training.yaml
