[project]
    classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
    ]
    dependencies = [
        "accelerate",
        "datasets",
        "huggingface-hub",
        "lightgbm",
        "numpy",
        "omegaconf",
        "optuna",
        "polars",
        "rich",
        "scikit-learn",
        "sglang",
        "torch",
        "transformers",
        "typer",
        "tqdm",
        "torchvision",
        "torchaudio",
        "wandb",
    ]
    description = "configurable trainer for generative event models"
    keywords = [
        "model training",
        "generative event models",
        "configurable training",
    ]
    license = "MIT"
    license-files = [ "LICEN[CS]E.*" ]
    name = "cotorra"
    readme = { file = "README.md", content-type = "text/markdown" }
    requires-python = ">=3.11"
    version = "26.2.0"

    [project.scripts]
        cotorra = "cotorra.cli:main"

    [project.urls]
        Repository = "https://github.com/bbj-lab/cotorra"

    [project.optional-dependencies]
        dev = [ "ruff>=0.15.4" ]
        gen = [
            "quick-sco-re @ git+https://github.com/lukesolo-ml/SCOPE_REACH_optimized_inference.git",
        ]

[tool.ruff]
    extend-exclude = [ "*.md" ]
    line-length    = 88

    [tool.ruff.format]
        docstring-code-format     = true
        indent-style              = "space"
        line-ending               = "lf"
        quote-style               = "double"
        skip-magic-trailing-comma = true

    [tool.ruff.lint]
        ignore = [ "E731" ]
        select = [ "E", "F", "I" ]

        [tool.ruff.lint.isort]
            known-first-party = [ "cotorra" ]

[build-system]
    build-backend = "setuptools.build_meta"
    requires      = [ "setuptools>=69", "wheel" ]
