[project]
    authors = [
        { name = "Michael C. Burkhart", email = "burkh4rt@uchicago.edu" },
        { name = "Luke Solo", email = "lsolo@uchicago.edu" },
        { name = "Inhyeok Lee", email = "ihlee@uchicago.edu" },
        { name = "S'Khaja Charles", email = "skhaja@uchicago.edu" },
        { name = "Brett K. Beaulieu-Jones", email = "beaulieujones@uchicago.edu" },
    ]
    classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
    ]
    dependencies = [
        "accelerate",
        "datasets",
        "huggingface-hub",
        "lightgbm",
        "numpy",
        "omegaconf",
        "opacus",
        "optuna",
        "polars",
        "rich",
        "scikit-learn",
        "torch",
        "torchaudio",
        "torchvision",
        "tqdm",
        "transformers",
        "typer",
        "xgboost",
        "wandb",
    ]
    description = "configurable trainer for generative event models"
    keywords = [
        "model training",
        "generative event models",
        "configurable training",
    ]
    license = "MIT"
    license-files = [ "LICEN[CS]E.*" ]
    name = "cotorra"
    readme = { file = "README.md", content-type = "text/markdown" }
    requires-python = ">=3.11"
    version = "26.6.0"

    [project.scripts]
        cotorra = "cotorra.cli:main"

    [project.urls]
        Documentation = "https://cotorra.readthedocs.io"
        Issues        = "https://github.com/bbj-lab/cotorra/issues"
        Repository    = "https://github.com/bbj-lab/cotorra"

    [project.optional-dependencies]
        all = [ "cotorra[dev,docs,gen]" ]
        dev = [ "pip", "ruff" ]
        docs = [
            "mkdocs",
            "mkdocs-material",
            "mkdocstrings[python]",
            "mkdocs-include-markdown-plugin",
        ]
        gen = [
            "quick-sco-re @ git+https://github.com/lukesolo-ml/SCOPE_REACH_optimized_inference.git",
            "sglang",
        ]

[build-system]
    build-backend = "setuptools.build_meta"
    requires      = [ "setuptools", "wheel" ]

[tool.ruff]
    extend-exclude = [ "*.md" ]
    line-length    = 88

    [tool.ruff.format]
        docstring-code-format     = true
        indent-style              = "space"
        line-ending               = "lf"
        quote-style               = "double"
        skip-magic-trailing-comma = true

    [tool.ruff.lint]
        ignore = [ "E731" ]
        select = [ "E", "F", "I" ]

        [tool.ruff.lint.isort]
            known-first-party       = [ "cocoa", "cotorra", "coreopsis" ]
            split-on-trailing-comma = false

[tool.setuptools]
    include-package-data = true

    [tool.setuptools.packages.find]
        where = [ "src" ]

    [tool.setuptools.package-data]
        "cotorra.config" = [ "*.yaml" ]
